druckreife edition until xiv

--- a/bindu.tex
+++ b/bindu.tex
@@ -129,8 +129,444 @@ The third chapter contains a comparative analysis of the complex early modern yo
 \chapter[Critical Edition \& Annotated Translation of the \emph{Tattvayogabindu}]{The \emph{Tattvayogabindu} of Rāmacandra \\ \huge  
   Critical Edition \& Annotated Translation}
 \pagestyle{chapter2style}
-\cleardoublepage
- 
+\clearpage
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+                   \ekddiv{
+                     head={[\uproman{16}. \textbf{rājayogayuktasya puruṣasya yac charīracihnam}]},
+                     type=section,
+                     depth=2, 
+                     n=XVI
+                   }
+                   \xmlhead[h16]{[XVI. rājayogayuktasya puruṣasya yac charīracihnam]}
+                   \phantomsection
+                   \addcontentsline{toc}{section}{XVI. rājayogayuktasya puruṣasya yac charīracihnam}
+                  \phantomsection\label{rajabody}
+                      \begin{prose}[p16_01]
+      \noindent
+%------------------------------  
+%idānīṃ rājayogayuktasya           śarīre yaccihnaṃ  tat    kathyate / \E
+%idānīṃ rājayogayuktasya puruṣasya yaccharīracihnaṃ         kathyate / \P
+%idānīṃ rājayogayuktasya puruṣasya          cinhnaṃ         kathyate / \L
+%idānīṃ rājayogayuktasya puruṣasya          cinhnaṃ         kathyate // \B
+%idānīṃ rājayogayuktasya puruṣasya yaccarīracihnaṃ   tat    kathyate / \N1
+%idānīṃ rājayogayuktasya puruṣasya yaccharīracihūṃ   tat    kathyate// \N2
+%idānīṃ rājayogayuktasya puruṣasya yaccarīracihnaṃ   tat    kathyate / \D
+%idānīṃ rājayogayuktasya puruṣasya yacharīre cihnaṃ   tat    kathyate // \J
+%idānīṃ rājayogayuktasya puruṣasya yaccarīracihnaṃ   tat    kathyataṃ / \K1      
+%idānīṃ rājayogayuktasya puruṣasya yaccharīre cinhaṃ tata   kathyate \U1
+%idānīṃ rājayogayuktasya puruṣasya yat śarīracinhaṃ         kathyate / \U2
+%------------------------------
+%Now, the sign of the body of the person who is endowed with Rājayoga is taught.
+%------------------------------    
+\note[type=source, labelb=_39b, labele={_39e}, nosep]{cf. YSv (PT, p. 834): idānīṃ kathayiṣyāmi rājayogasya lakṣaṇam | rājayoge kṛte puṃbhiḥ siddhicihnaṃ bhaved iti | paripūrṇaṃ bhavec cittaṃ jagatstho 'pi jagadbahiḥ | na kṣobho janma mṛtyuś ca na duḥkhaṃ na sukhaṃ tathā | bhedābhedau manaḥsthau na jñānaṃ śīlaṃ kulaṃ tathā | prakāśakuśasambandhiprasaṅgo 'yaṃ nirantaram | sarvaprakāśako 'sau tu naṣṭabhedādir eva ca | asya citte nānurāgo virāgo na bhaved iti | asya jāter na cihnañ ca niṣkalo 'yaṃ nirañjanaḥ | ananto 'yaṃ mahājyotir vāñchāṃ bhogaṃ dadāti ca |}
+idānīṃ rājayogayuktasya
+  \app{\lem[wit={ceteri}]{puruṣasya}\linelabel{_39b}
+    \rdg[wit={E}]{\om}}
+  \app{\lem[wit={D,N1,P},alt={yac charīracihnaṃ}]{yaccharīracihnaṃ}
+    \rdg[wit={K1}]{yaccharīracihnaṃ}
+    \rdg[wit={E}]{śarīre yac cihnaṃ}
+    \rdg[wit={U1}]{yac charīre cinhaṃ}
+    \rdg[wit={J}]{ya charīre cihnaṃ}
+    \rdg[wit={U2}]{yat śarīracinhaṃ}  
+    \rdg[wit={N2}]{yac charīracihūṃ}
+    \rdg[wit={B,L}]{cinhnaṃ}}
+  \app{\lem[wit={D,E,J,K1,N1,N2}]{tat}
+    \rdg[wit={U1}]{tata}
+    \rdg[wit={B,L,P,U2}]{\om}} kathyate/
+%------------------------------  
+%tatsarvatra pūrṇo bhavati / \E
+%tatsarvatra pūrṇā bhavati / \P
+%tatsarvatra pūrṇo bhavati / \L
+%tatsarvatra pūrṇo bhavatī / \B
+%  sarvvatra pūrṇo bhavati / \N1
+%  sarvvatra pūrṇā bhavati  \N2
+%  sarvvatra pūrṇo bhavati  \D
+%  sarvvatra pūrṇo bhavati  \K1  
+%   sarvatra pūrṇo bhavati//  \J  
+%  sarvvatra pūrṇo bhavati   \U1
+%tatsarvatra pūrṇo bhavati// \U2
+%------------------------------
+%Abundance arises at all times.    
+%------------------------------
+  \app{\lem[wit={X},alt={sarvatra°}]{sarvatra}
+  \rdg[wit={Y}]{tatsarvatra°}}
+\app{\lem[wit={ceteri}, alt={°pūrṇo}]{pūrṇo}
+  \rdg[wit={P,N2}]{pūrṇā}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B}]{bhavatī}}/
+%------------------------------  
+%pṛthivyāḥ dūre tiṣṭhati / \E
+%pṛthivyāḥ hare tiṣṭhati / \P
+%\om                      \L
+%\om                      \B
+%pṛthivyāḥ dūre  tiṣṭhati / \N1
+%pṛthivyāḥ dūra  tiṣṭhati / \N2
+%pṛthivyāḥ dūre  tiṣṭhati / \D
+%pṛthivyāḥ dūre  tiṣṭhati // \K1
+%pṛthivyāḥ dūre  tiṣṭhaṃti // \J
+%pṛthivyāḥ ddūre tiṣṭhati / \U1 %emend to na tiṣṭhati? 
+%pṛthivyā dūraṃ  tiṣṭhati // \U2 !!dūraṃ
+%------------------------------
+%He dwells distant from the world. 
+%------------------------------
+\app{\lem[wit={ceteri}]{pṛthivyāḥ}
+  \rdg[wit={U2}]{pṛthivyā}
+  \rdg[wit={B,L}]{\om}} 
+\app{\lem[wit={D,E,J,K1,N1}]{dūre}
+   \rdg[wit={U1}]{ddūre}
+   \rdg[wit={N2}]{dūra}
+   \rdg[wit={U2}]{dūraṃ}
+   \rdg[wit={B,L}]{\om}}
+\app{\lem[wit={ceteri}, alt={tiṣṭhati}]{tiṣṭhati}
+  \rdg[wit={B,L}]{\om}}/
+%------------------------------
+%pṛthivyāṃ vyāpya tiṣṭhati / \E
+%pṛthi-----vyāpya tiṣṭhati / \P
+%\om                         \L
+%\om                         \B
+%pṛthvāṃ vyāpya   tiṣṭhati /   \N1
+%pṛthvīṃ vyāpya   tiṣṭhati /   \N2
+%pṛthvīṃ vyāpya   tiṣṭhati /   \D  %geht auch pṛthu für Erde?
+%pṛthvīṃ vyāpya   tiṣṭhati //   \K1  
+%\om   \J
+%\om   \U1
+%pṛthivyā vyāti   tiṣṭhati     \U2
+%------------------------------
+%He dwells ins the world, having permeated it. 
+%------------------------------
+\app{\lem[wit={D,K1,N2}]{pṛthvīṃ}
+  \rdg[wit={N1}]{pṛthvāṃ}
+  \rdg[wit={E}]{pṛthivyāṃ}
+  \rdg[wit={P}]{pṛthi°}
+  \rdg[wit={U2}]{pṛthivyā}
+  \rdg[wit={B,J,L,U1}]{\om}}
+\app{\lem[wit={D,E,K1,P,N1,N2}]{vyāpya}
+  \rdg[wit={U2}]{vyāti}
+  \rdg[wit={B,J,L,U1}]{\om}}
+\app{\lem[wit={ceteri}]{tiṣṭhati}
+  \rdg[wit={B,J,L,U1}]{\om}}/ 
+%------------------------------
+% yasya janmamaraṇe  na staḥ sukhaṃ na bhavati /  \E
+% yasya janmamaraṇe  na staḥ sukhaṃ na bhavati /  \P
+% \om                                            \L
+% \om                                            \B
+% yasya janmamaraṇe  na staḥ sukhaṃ na bhavati /  \N1
+% yasya janmamaraṇe  na staḥ sukhaṃ na bhavati /  \N2
+% yasya janmamaraṇe  na staḥ sukhaṃ na bhavati /  \D
+% yasya janmamaraṇo  na staḥ sukhaṃ na bhavati //  \K1
+% \om                                             \J
+% \om                                            \U1
+% yasya jananamaraṇe na staḥ sukhaṃ na bhavati /  \U2 maraṇe nom/acc dual! staḥ von as 3. dual 
+%------------------------------
+% Birth and death both do not exist. Happiness does not exist. 
+% ------------------------------
+\app{\lem[wit={ceteri}, alt={yasya janmamaraṇe na staḥ}]{yasya janmamaraṇe na staḥ}
+  \rdg[wit={B,J,L,U1}]{\om}}/
+\app{\lem[wit={ceteri}, alt={sukhaṃ na bhavati}]{sukhaṃ na bhavati}
+  \rdg[wit={B,J,L,U1}]{\om}}/ 
+% ------------------------------
+% \om                 \E
+% \om                 \P
+% \om                 \L
+% \om                  \B
+% duḥkhaṃ na bhavati / \N1
+% duḥkhaṃ na bhavati / \N2
+% duḥkham na bhavati / \D
+%duḥkham na bhavati // \K1
+%\om                   \J
+% \om                  \U1
+% \om                  \U2
+% ------------------------------
+%Suffering does not exist. 
+%------------------------------
+\app{\lem[wit={ceteri}]{duḥkhaṃ na bhavati}
+  \rdg[wit={Y,J,U1}]{\om}} 
+%------------------------------
+% \om               \E
+% kalaṃ na bhavati  \L
+% kulaṃ na bhavatī// \B
+% kūlaṃ na bhavati / \P
+% kūlaṃ na bhavati / \N1
+% kūlaṃ na bhavati / \N2
+% kūlaṃ na bhavati / \D
+% kulaṃ na bhavati \K1
+%\om                 \J
+% \om               \U1
+% kulaṃ na bhavatī// \U2
+%------------------------------
+%Linage does not exist. 
+%------------------------------
+\app{\lem[wit={B,K1,U2}]{kulaṃ}
+  \rdg[wit={D,P,N1,N2}]{kūlaṃ}
+  \rdg[wit={L}]{kalaṃ}
+  \rdg[wit={E,J,U1}]{\om}}
+\app{\lem[wit={ceteri}]{na bhavati}
+  \rdg[wit={B,U2}]{na bhavatī}
+\rdg[wit={E,J,U1}]{\om}}/
+%------------------------------
+% \om                  \E
+% śītalaṃ na bhavati / \P
+% \om                  \L
+% \om                  \B
+% śīlaṃ na bhavati /   \N1
+% śīlaṃ na bhavati /   \N2
+% śīlaṃ na bhavati /   \D
+% śīlaṃ na bhavati /   \K1
+% śīlaṃ na bhavati //   \J
+% śīlaṃ na bhavati /   \U1
+% śīlaṃ na bhavati /   \U2
+%------------------------------
+% Custom does not exist. 
+% ------------------------------
+\app{\lem[wit={ceteri}]{śīlaṃ}
+  \rdg[wit={P}]{śītalaṃ}
+  \rdg[wit={B,E,L}]{\om}}
+\app{\lem[wit={ceteri}]{na bhavati}
+  \rdg[wit={B,E,L}]{\om}}/
+%------------------------------
+% \om                 \E
+% sthānaṃ na bhavati / \P
+% \om                  \L
+% \om                  \B
+% sthānaṃ na bhavati / \N1
+% sthānaṃ na bhavati / \N2
+% sthānaṃ na bhavati / \D
+% sthānaṃ na bhavati / \K1
+% sthānaṃ na bhavati // \J
+% sthānaṃ na bhavati / \U1
+% sthānaṃ na bhavati / \U2
+%------------------------------
+% Place does not exist. 
+%------------------------------
+\app{\lem[wit={ceteri}]{sthānaṃ na bhavati}
+  \rdg[wit={B,E,L}]{\om}}/
+%------------------------------
+% \om                                                                             \E
+%asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśo niraṃtaraṃ     pratyakṣo bhavati  \P
+%asya siddhasya manomadhye īśvarasaṃbaṃdhi prakāśo  niraṃtaraṃ    pratyakṣo bhavati  \L
+%asya siddhasya manomadhye īśvaraṃ saṃbaṃdhī prakāśo  niraṃtaraṃ  pratyakṣo bhavatī//  \B
+%asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśaḥ niraṃtaraṃ    pratyakṣa bhavati  \N1
+%asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśaḥ niraṃtaraṃ    pratyakṣa bhavati/  \N2
+%asya siddhasya manomadhye īśvarasaṃbaṃdhi prakāśaḥ niraṃtaraṃ    pratyakṣo bhavati  \D
+%asya siddhasya manomadhye īśvarasaṃbaṃdhi prakāśaḥ niraṃtaraṃ    pratyakṣo bhavati  \K1
+%asya siddhasya  pṛthivivyāpyaṃ tiṣṭhati// yasya janmamaraṇe na stu sukhaṃ na bhavati// duḥkhaṃ na bhavati// kulaṃ na bhavati// śīlaṃ na bhavati// sthānaṃ na bhavati// asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśaḥ// niraṃtaraṃ    pratyakṣo bhavati//  \J
+%asya siddhasyaṃ pṛthivī vyāpya tiṣṭhati yasya yanma maraṇai na saḥ sukhaṃ na bhati kulaṃ na bhavati śīlaṃ na bhavati sthānaṃ na bhavati ..... asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśaḥ niraṃtaraṃ pratyakṣo bhavati  \U1
+%asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśo nirattaraṃ  pratyakṣo bhavati//  \U2
+%------------------------------
+%The manifestation of permanent perception of the connection with god arises within the mind of the accomplished one. 
+%------------------------------
+asya \app{\lem[wit={ceteri}]{siddhasya}
+  \rdg[wit={E}]{\om}
+  \rdg[wit={J,U1}]{siddhasya pṛthivivyāpyaṃ tiṣṭhati || yasya janmamaraṇe na staḥ sukhaṃ na bhavati || duḥkhaṃ na bhavati || kulaṃ na bhavati || śīlaṃ na bhavati ||}}
+%  \rdg[wit={J}]{siddhasya pṛthivivyāpyaṃ tiṣṭhati || yasya janmamaraṇe na stu sukhaṃ na bhavati || duḥkhaṃ na bhavati || kulaṃ na bhavati || śīlaṃ na bhavati || sthānaṃ na bhavati || asya siddhasya manomadhye īśvarasaṃbaṃdhī prakāśaḥ || niraṃtaraṃ pratyakṣo bhavati}
+  %\rdg[wit={U1}]{siddhasyaṃ pṛthivī vyāpya tiṣṭhati yasya yanma maraṇai na saḥ sukhaṃ na bhati kulaṃ na bhavati śīlaṃ na bhavati sthānaṃ na bhavati asya siddhasya}
+\app{\lem[wit={ceteri}]{manomadhye}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{īśvarasaṃbandhī}
+  \rdg[wit={B}]{īśvaraṃ saṃbaṃdhī}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{prakāśo}
+  \rdg[wit={X}]{prakāśaḥ}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{nirantaraṃ}
+  \rdg[wit={U2}]{nirattaraṃ}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{pratyakṣo}
+  \rdg[wit={N1}]{prakyakṣa}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B}]{bhavatī}
+  \rdg[wit={E}]{\om}}/
+%------------------------------
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati/ \E
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati/ \P
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavatī// \L
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavatī// \B
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati/ \N1
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati    \D
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati    \K1
+%sa ca prakāśo na śīto na coṣṇo na śveto na pīto bhavati//     \J
+%sa ca prakāśo na śīto na coṣṇo na kheto na pīto bhavati/ \N2
+%sa ca prakāśo na śīto na ?hbho?na kheto na pīto bhavati // \U1
+%sa ca prakāśo// na śīto na coṣṇo na śveto pīto na bhavati // \U2
+%------------------------------
+%And he is shining - not cold, and not hot, not white [and] not yellow. 
+%------------------------------
+sa ca prakāśo na śīto na
+\app{\lem[wit={ceteri}]{coṣṇo}
+  \rdg[wit={U1}]{+++o}}
+na
+\app{\lem[wit={ceteri}]{śveto}
+  \rdg[wit={N2,U1}]{kheto}}
+\app{\lem[wit={ceteri}]{na pīto}
+  \rdg[wit={U2}]{pīto na}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{bhavatī}}/
+%------------------------------
+%tasya na jātir  na kiñcic cihnam  \E
+%tasya na jātir  na kiñcic cihnaṃ  \P
+%tasya na jātir  na kiṃcic cinhaṃ  \L
+%tasya na jātir  na kiṃcic cinhaṃ  \B
+%tasya na jātir  na kiṃcic cihūṃ  \N1
+%tasya na jāti   na kiṃcic cihūṃ//  \D
+%tasya na jāti   na kiṃcic cihūṃ//  \K1
+%tasya na jātir  na kiṃcit// cihūṃ//  \J
+%tasya na jāti   na kiṃcic cihūṃ  \N2
+%tasya na jātir  na kiṃcit khecha cinhaṃ  \U1
+%tasya na jānāti na kiṃcit cinhaṃ //  \U2
+%------------------------------
+%He does not have a caste, nor does he have any attributes.
+%------------------------------
+tasya na
+\app{\lem[wit={ceteri}, alt={jātir}]{jāti\skp{r-na}}
+  \rdg[wit={D,K1,N2}]{jāti}
+  \rdg[wit={U2}]{jānāti}
+}\skm{r-na}
+\app{\lem[wit={ceteri}, alt={kiñcic cihnam}]{kiñcic\skp{-}cihnam}
+  \rdg[wit={E}]{kiñcic cihnam}
+  \rdg[wit={D,K1,N1,N2}]{kiñcic cihūṃ}
+  \rdg[wit={J}]{kiṃcit || cihūṃ}
+  \rdg[wit={U1}]{kiṃcit khecha cinhaṃ}
+  \rdg[wit={U2}]{na kiṃcit cinhaṃ}}/
+%------------------------------
+%ayaṃ   ca niṣkalo   niraṃjanaḥ   alakṣyaś ca bhavati \E
+%ayaṃ   ca niṣkalo   niraṃjanaḥ   alakṣyaś ca bhavati \P
+%vyayaṃ ca niṣkalo   niraṃjanaṃ// alakṣaś  ca bhavati// \L
+%vyayaṃ ca nīṣkalo   niraṃjanaṃ// alakṣaś  ca bhavatī// \B
+%ayaṃ   ca niṣkalo   niraṃjanaḥ// alakṣyaś ca bhavati// \D
+%ayaṃ   ca niṣkalo   niraṃjanaḥ// alakṣyaś ca bhavati// \K1
+%arya   ca niḥkalo   niraṃjanaḥ// alakṣyaś ca bhavati// \J
+%ayaṃ   ca nīṣkalo   niraṃjanaḥ   alakṣaś  ca bhavati// \N1
+%ayaṃ   ca niṣkalo   niraṃjanaḥ   alakṣaś  ca bhavati// \N2
+%ayaṃ   ca niḥkalo   niraṃjanaḥ   alakṣyaḥ    bhavati/ \U1
+%ayaṃ   ca nīṣkalo   niraṃjanaḥ// alakṣyaḥ    bhavati// \U2
+%------------------------------
+%And he is without parts, immacule and uncharacterized.  
+%------------------------------
+\app{\lem[wit={ceteri}]{ayaṃ}
+  \rdg[wit={J}]{arya}
+  \rdg[wit={B,L}]{vyayaṃ}}
+ca\\
+\app{\lem[wit={ceteri}, alt={niṣkalo}]{niṣkalo}
+  \rdg[wit={B,U2}]{nīṣkalo}
+  \rdg[wit={J,U1}]{niḥkalo}}
+nirañjanaḥ/
+\app{\lem[wit={ceteri}, alt={alakṣyaś}]{alakṣya\skp{ś-ca}}
+  \rdg[wit={U1,U2}]{alakṣyaḥ}
+  \rdg[wit={B,L,N1,N2}]{alakṣaś}
+}\app{\lem[wit={ceteri}, alt={ca}]{\skm{ś-ca}}
+  \rdg[wit={U1,U2}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B}]{bhavatī}}/
+%------------------------------
+%atha ca phaladvaṃde na          kāminy āder   yasyecchā         na bhavati // \E
+%atha ca phalacaṃdana            kāminy āder   yasyochā          na bhavati    \P
+%atha ca phalavaṃdana            kāminy ādir   yasya             na bhavati    \L %%%Stemma point stemma point!!!%%%%  SUPER IMPORTANT! Steammatic analysis! 
+%atha ca phalaṃ jaṃdana          kāminy ādar   yasye             na bhavatī    \B
+%atha ca phalacaṃdrana           kāminy āder   yasya  yasyeccha     bhavati/   \N1
+%atha ca phalacaṃdana            kāminy āde    yasya  yasyechā      bhavati//  \D
+%atha ca phalacaṃdana            kāminy āde    yasya  yasyechā      bhavati//  \K1
+%atha ca phalaṃ caṃdana          kāminy āder   yasya  yasyechā      bhavaṃti//  \J
+%atha ca phalaṃ/caṃdra           kāminy āder   yasya  yasyeccha     bhavati/   \N2
+%atha ca phalaṃ caṃdana          kāminy āder   yasya  yaṃ           bhavati    \U1
+%atha ca phalacaṃdana            kāminy āder   yasyechā             bhavati//  \U2
+%------------------------------
+%And then his desire for the most excellent fruit and affectionate woman etc. does not arise for him. 
+%------------------------------
+atha ca
+\app{\lem[wit={D,K1,P,U2}, alt={phalacandana°}]{phalacandana}
+     \rdg[wit={N1}]{phalacaṃdrana}
+     \rdg[wit={J,U1}]{phalaṃ caṃdana}
+     \rdg[wit={N2}]{phalaṃ | caṃdra}
+     \rdg[wit={L}]{phalavaṃda}
+     \rdg[wit={B}]{phalaṃ jaṃda}
+     \rdg[wit={E}]{phaladvande}
+}kāmi\skp{ny-ā}\app{\lem[wit={ceteri}, alt={āder}]{\skm{ny-ā}de\skp{r-ya}}
+     \rdg[wit={D,K1}]{āde}
+     \rdg[wit={B}]{ādar}
+     \rdg[wit={L}]{ādir}
+   }\app{\lem[type=emendation, resp=egoscr, alt={yasya yasyecchā}]{\skm{r-ya}sya yasyecchā}
+     \rdg[wit={D,J,K1}]{yasya yasyechā}
+     \rdg[wit={E}]{yasyecchā}
+     \rdg[wit={P}]{yasyochā}
+     \rdg[wit={N1,N2}]{yasya yasyeccha}
+     \rdg[wit={U1}]{yasya yaṃ}
+     \rdg[wit={U2}]{yasye chā}
+     \rdg[wit={L}]{yasya}
+     \rdg[wit={B}]{yasye}}
+   \app{\lem[wit={ceteri}]{bhavati}
+     \rdg[wit={J}]{bhavaṃti}
+     \rdg[wit={E,L,P}]{na bhavati}
+     \rdg[wit={B}]{na bhavatī}}/
+%------------------------------
+% \om                      \E
+% \om                      \P
+% \om                      \L
+% \om                      \B
+%taṃ taṃ bhogaṃ prāpnoti   \D
+%taṃ taṃ bhogaṃ prāpnoti//   \J
+%taṃ taṃ bhogaṃ prāpnoti   \K1   
+%taṃ taṃ bhogaṃ prāpnoti   \N1
+%taṃ taṃ bhogaṃ prāpnoti// \N2
+%tataṃ bhogaṃ prāpnoti     \U1
+% \om                      \U2
+%------------------------------
+%He attains expanded enjoyment. 
+%------------------------------
+\app{\lem[wit={D,J,K1,N1,N2}]{taṃ taṃ}
+  \rdg[wit={U1}]{tataṃ}
+  \rdg[wit={Y}]{\om}}
+\app{\lem[wit={ceteri}]{bhogaṃ prāpnoti}
+  \rdg[wit={Y}]{\om}}/
+%------------------------------
+% \om                      \P
+% \om                      \L
+% \om                      \B
+% athavā yasya    mana eva   sthāne 'nurāgaṃ na prāpnoti// \D
+%athavā yasya    mana eva   sthāne nurāgaṃ na prāpnoti// \K1
+%athavā yasya    mana etat   sthāne 'nurāgaṃ na prāpnoti// \J
+%athavāsya       mana eva   sthāne 'nurāgaṃ na prāpnoti/ \N1
+%athavāsya       mana eva   sthāne 'nurāgaṃ na prāpnoti/ \N2
+%athavāsvā       mana etata sthāne  nurāgaṃ na prāpnoti/ \U1
+% \om                      \U2
+%------------------------------
+%Alternatively, his mind truly does not suffer attachment in this state.
+%------------------------------
+atha\app{\lem[wit={N1,N2}, alt={°vāsya}]{vāsya}
+  \rdg[wit={D,J,K1}]{°vā yasya}
+  \rdg[wit={U1}]{°vāsvā}
+  \rdg[wit={Y}]{\om}}
+\app{\lem[wit={X}]{mana}
+  \rdg[wit={Y}]{\om}} 
+\app{\lem[wit={D,K1,N1,N2}]{eva}
+  \rdg[wit={J}]{etat}
+  \rdg[wit={U1}]{etata}
+  \rdg[wit={Y}]{\om}}
+\app{\lem[wit={X}, alt={sthāne 'nurāgaṃ na prāpnoti}]{sthāne'nurāgaṃ na prāpnoti}
+  \rdg[wit={Y}]{\om}}\dd{}\linelabel{_39e}
+\end{prose}
+  \end{edition}
+  \begin{translation}
+                       \ekddiv{
+                     head={[\uproman{16}. \textbf{The physical sign of a person who is engaged in Rājayoga}]},
+                     type=section,
+                     depth=2, 
+                     n=XVI
+                   }
+                   \xmlhead[h16]{[XVI. The physical sign of a person who is engaged in Rājayoga]}                  
+    \phantomsection\label{rajabodytrans}
+    \begin{tlate}[p16_01]
+      \noindent
+      Now, the physical sign of a person who is engaged in Rājayoga is taught.\footnote{The shift from Lakṣyayoga to the bodily sign of Rājayoga seems abrupt, but Rāmacandra follows the \emph{Yogasvarodaya}'s structure, treating the remaining Lakṣyayogas later.} He is rich at all times.\footnote{In light of Rāmacandra's understanding of Rājayoga as the ``yoga for kings,'' this translation for \textit{pūrṇa} is obvious.} He exists detached from the world [yet] having permeated the world.\footnote{Cf. \citetitle{sarvangayoga} 3.22: \textit{icchā parai tahāṃ so jāī} | \textit{tīni loka mahiṃ aṭaka na kāī} | \textit{svarga jāī devani mahiṃ baiṭhai} | \textit{nāgaloka pātāla su paiṭhai} || 22 ||} For whom neither birth nor death exists;\footnote{Cf. \citetitle{sarvangayoga} 3.19d: \textit{jarā na vyāpai kāla na ṣāī} | and 3.20c: \textit{ajara amara ati bajra śarīrā} |} happiness does not exist; suffering does not exist;\footnote{Equanimity towards opposites in the state of Rājayoga are common among texts that teach Rājayoga, cf. e.g. \citetitle{amanaskaed} 1.26ab: \textit{sukhaṃ duḥkhaṃ na jānāti śītoṣṇaṃ ca na vindati} |; \citetitle{hp} 4.111 ≈ \citetitle{nadabindu} 53ab−54cd: \textit{na vijānāti śītoṣṇaṃ na duḥkhaṃ na sukhaṃ tathā} | \textit{na mānaṃ nopamānaṃ ca yogī yuktaḥ samādhinā} ||; also cf. \citetitle{sarvangayoga} 3.18cd: \textit{jākaiṃ dukha aru sukha nahiṃ hoī} | \textit{harṣa śoka vyāpai nahiṃ koī} |} lineage does not exist; moral conduct does not exist;\footnote{Cf. \citetitle{datta2015} 162.} [and] abode does not exist - in the mind of this accomplished [\textit{puruṣa}], a light that is connected to God becomes perceptible. And, the light is not cold, not hot, neither white nor yellow.\footnote{Cf. \citetitle{amanaskaed} 1.51: \textit{vāsarārdhalayenāpi svātmajyotiḥ prakāśate} | \textit{sūryo gobhir ivoddīpto yogī viśvaṃ prakāśate} |; also cf. \citetitle{sarvangayoga} 3.13cd: \textit{rājayoga saba ūpara chājai} | \textit{jo sādhai so adhika birājai} ||; and cf. \citetitle{sarvangayoga} 3.23cd: \textit{hṛdai prakāśa rahai dina rātī} | \textit{deśai jyoti tela bina vātī} ||} Neither does he have a caste, nor does he have any sign. Furthermore, he is without parts, immaculate and uncharacterized. And then, whatever wish for the most excellent fruit, affectionate woman, etc. arises,\footnote{This statement is unusual as it contradicts standard renunciatory principles. For this reason, \textit{bhavati} was changed to \textit{na bhavati} in the transmission of the \gamma-group. The passage is supported by the \emph{Yogasvarodaya}: \ldots \textit{mahājyotir vāñchāṃ bhogaṃ dadāti ca} | cf. sources. This suits the agenda of Rāmacandra of detaching Rājayoga from its renunciate connotations.} he obtains that very enjoyment.\footnote{For similar constructions to ``\textit{yasya yasyecchā} \ldots \textit{taṃ taṃ bhogaṃ} \ldots'' cf. \citetitle{anandakanda} 1,15.312 and \citetitle{hathatattvakaumudi} 5.39.} However, his very mind does not experience attachment in this situation.\footnote{Nearly all manuscripts omit (some even repeat) sentences at this section, likely due to eye-skipping caused by structural similarity and brevity of the sentences.}
+     %\flushpage
+  \end{tlate}
+\end{translation}
+\end{alignment}
+\pagebreak %after pp. 33-34
 \newpage
 \cleardoublepage
 \selectlanguage{english}
@@ -184,3 +620,9 @@ The third chapter contains a comparative analysis of the complex early modern yo
 \printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
 
 \end{document}
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
