bis 8 enjoyments edition druckreif!

--- a/bindu.bib
+++ b/bindu.bib
@@ -11,17 +11,13 @@
   
 }
 
-@article{hypo,
-  title={Voluntary Hypometabolism in an Indian Yogi},
-  author= {Heller, Craig H. and Elsner, Robert and Nageswara, Rao},
-  year= {1987},
-  journal= {Journal of Thermal Biology},
-  volume= {12},
-  number= {2},
-  pages= {171--173},
-  publisher= {Pergamon Journals Ltd},
-  address= {Headington},  
- keywords={seclit},
+@misc{nadicakra,
+   title={Nāḍīcakra},
+   %author={Devendra},
+   howpublished={Acc. No. 1334. Oriental Research Institute, Srinagar.},
+   %address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{1}},
+   keywords={primary},
 }%!
 
 @incollection{ohanlon2011religious,
@@ -1588,8 +1584,8 @@ keywords={primary},
 }%!
 
 @misc{kathaup,
-  title={Kaṭhopaniṣad},
-  subtitle={Kaṭhopanishad: With the Sanskrit Text, Anvaya, Vritti, Word Meaning, Translation, Notes and Index},
+  title={Kathopaniṣad},
+  subtitle={Kathopanishad: With the Sanskrit Text, Anvaya, Vritti, Word Meaning, Translation, Notes and Index},
   author={Vasu, Sri Chandra},
   series={Vedanta Series},
   volume={No. 3.}, 
@@ -2202,7 +2198,7 @@ Sound},
 
 @article{white2011,
  title={On the Magnitude of the Yogic Body},
- editor={Munoz, Adrian and Lorenzen, David N.},
+ editor={Muñoz, Adrian and Lorenzen, David N.},
  booktitle={Yogi Heroes and Poets: Histories and Legends of the Nāths},
  year={2011},
  pages={79--90},
@@ -2719,6 +2715,19 @@ keywords={seclit},
   keyword={seclit},
 }%!
 
+@article{hypo,
+  title={Voluntary Hypometabolism in an Indian Yogi},
+  author= {Heller, Craig H. and Elsner, Robert and Nageswara, Rao},
+  year= {1987},
+  journal= {Journal of Thermal Biology},
+  volume= {12},
+  number= {2},
+  pages= {171--173},
+  publisher= {Pergamon Journals Ltd},
+  address= {Headington},  
+ keywords={seclit},
+}%!
+
 @article{molen1981,
   title={Aims and Method of Javanese Philology},
   author= {Van der Molen, W.},
@@ -2921,7 +2930,7 @@ keywords={primary},
    title={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
    author={Powell, Seth David},   
    year={2023},
-   note={Ph.D. Dissertation as submitted on April 2023}, 
+   note={Dissertation as submitted on April 2023}, 
    school={Harvard University},
    address={Cambridge, Massachusetts},
    keywords={seclit},
@@ -2940,7 +2949,6 @@ keywords={primary},
  year={2013},
  school={University of Oxford},
  address={Oxford},
- note={Ph.D. Dissertation}, 
  howpublished={\url{https://ora.ox.ac.uk/objects/uuid:4edd5abe-0aa6-4c52-96d2-c4acfce1ad60/files/mb09d5103bdc89d664c01d03307b6377e}}, 
  keywords={seclit},
  }%!
@@ -3064,23 +3072,14 @@ keywords={primary},
     keywords={seclit},
 }%!
 
-@misc{nadicakra,
-   title={Nāḍīcakra},
-   %author={Devendra},
-   howpublished={Acc. No. 1334. Oriental Research Institute, Srinagar.},
-   %address={National Archives Kathmandu},
-   %shorthand={S\textlowerscript{1}},
-   keywords={primary},
-}%!
-
 @misc{sardha,
-title={Sārddhatriśatikālottara},
-subtitle={Sārddhatriśatikālottara},
+title={Sārdhatriśatikālottara},
+subtitle={Sārdhatriśatikālottara},
 editor={Bhatt, N. R.},
 year={1979},
 publisher={Institute Francise De Pondicherry},
 address={Pondicherry},
-    keywords={primary},
+keywords={primary},
 }%!
 
 @misc{rudrayamala1937,
@@ -3492,8 +3491,8 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @misc{gorakbhani,
-  title={Gorakhbhāṇī},
-  subtitle={Gorakhbhāṇī},
+  title={Gorakhbāṇī},
+  subtitle={Gorakhbāṇī},
   editor={Baḍathvāl, P. D.},
   year={1960},
   publisher={Hindī Sāhity Sammelan},
