--- a/intro.bib
+++ b/intro.bib
@@ -1877,7 +1877,7 @@ keywords={seclit},
 @article{birch2019,
  title={The Amaraughaprabodha: New Evidence on the Manuscript Transmission of an Early Work on Haṭha- and Rājayoga},
  author= {Birch, Jason},
- year={2019},a
+ year={2019},
  series={Journal of Indian Philosophy},
  volume={47},
  pages={947--977},
